# ai-workflow-runtime

./: .env.example  .gitignore  README.md  pyproject.toml
browser-pdf-test/: .gitignore  README.md  TROUBLESHOOTING.md  run_test.py
configs/: workflow_registry.yaml
output/: batch_summary.json  ocr_cleaned.txt  ocr_cleaned_sample3.txt  ocr_raw.txt  result.json  result_sample_01.json  result_sample_02.json  result_sample_03.json
scripts/: batch_assessment.py  batch_draft_plan.py  batch_final_plan.py  batch_meeting.py  batch_monitoring.py  run_gh_test.py  run_single_site.py  run_support_plan.py  scan_sites.py
src/: main.py
src/clients/claude/: __init__.py  client.py
src/common/: __init__.py  exceptions.py  logger.py
src/rules/: __init__.py  validation.py
src/schemas/: __init__.py  extraction_result.py
src/tools/: sheets_writer.py
src/tools/pdf_preprocess/: __init__.py  browser_reader.py  extractor.py
src/workflows/meeting_record/: __init__.py  workflow.py
src/workflows/monitoring_record/: __init__.py  workflow.py
src/workflows/sample_workflow/: __init__.py  workflow.py
src/workflows/support_plan_pdf_extraction/: README.md  __init__.py  classifier.py  claude_runner.py  drive_scanner.py  extractor.py  normalizer.py  sheets_writer.py  state_store.py  workflow.py
